--- a/Lazztech.ObsidianPresences.CloudWebApp/Pages/Shared/_Layout.cshtml
+++ b/Lazztech.ObsidianPresences.CloudWebApp/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿<!-- <!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -71,7 +71,7 @@
 
     @RenderSection("Scripts", required: false)
 </body>
-</html> -->
+</html>
 
 <!DOCTYPE html>
 <html>
