--- a/Lazztech.ObsidianPresences.CloudWebApp/wwwroot/css/site.css
+++ b/Lazztech.ObsidianPresences.CloudWebApp/wwwroot/css/site.css
@@ -25,25 +25,25 @@ for details on configuring this project to bundle and minify static web assets. 
 }
 
 /* Carousel */
-/* .carousel-caption p {
+.carousel-caption p {
     font-size: 20px;
     line-height: 1.4;
-} */
+}
 
 /* Make .svg files in the carousel display properly in older browsers */
-/* .carousel-inner .item img[src$=".svg"] {
+.carousel-inner .item img[src$=".svg"] {
     width: 100%;
-} */
+}
 
 /* QR code generator */
-/* #qrCode {
+#qrCode {
     margin: 15px;
-} */
+}
 
 /* Hide/rearrange for smaller screens */
-/* @media screen and (max-width: 767px) { */
+@media screen and (max-width: 767px) {
     /* Hide captions */
-    /* .carousel-caption {
+    .carousel-caption {
         display: none;
     }
-} */
+}
