--- a/Lazztech.ObsidianPresences.CloudWebApp/Pages/Index.cshtml
+++ b/Lazztech.ObsidianPresences.CloudWebApp/Pages/Index.cshtml
@@ -5,10 +5,11 @@
 }
 
 <div class="card" style="width: 18rem;">
-  <img class="card-img-top" src="..." alt="Card image cap">
+  <img class="card-img-top" src="https://media.licdn.com/dms/image/C5603AQEXOnwgWJn5NA/profile-displayphoto-shrink_200_200/0?e=1539820800&v=beta&t=Lc-yvKAqRLfSVbxS6ptUSebw6OZA6z8ByKiNYzS9hUE" alt="Card image cap">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <h5 class="card-title">Gian Lazzarini</h5>
+    <p class="card-text">Seen: August 18, 2018</p>
+    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    <a href="#" class="btn btn-primary">Show All Occurences</a>
   </div>
 </div>
