Can't find images

--- a/Lazztech.ObsidianPresences.CloudWebApp/Pages/Index.cshtml
+++ b/Lazztech.ObsidianPresences.CloudWebApp/Pages/Index.cshtml
@@ -13,7 +13,7 @@
         <div class="card-body">
             <h5 class="card-title">Gian Lazzarini</h5>
             <p class="card-text">Seen: August 18, 2018</p>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            @*<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>*@
             <a href="#" class="btn btn-primary">Show All Occurences</a>
         </div>
         </div> 
@@ -27,7 +27,7 @@
                 <div class="card-body">
                     <h5 class="card-title">@person.Name</h5>
                     <p class="card-text">Seen: @snap.DateTimeWhenCaptured.ToString()</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    @*<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>*@
                     <a href="#" class="btn btn-primary">Show All Occurences</a>
                 </div>
                 </div>
