--- a/Lazztech.ObsidianPresences.CloudWebApp/Pages/Index.cshtml
+++ b/Lazztech.ObsidianPresences.CloudWebApp/Pages/Index.cshtml
@@ -8,20 +8,22 @@
     <div class="col">
         <h4>Processed Snapshots</h4>
         <hr>
-        <!--
-         <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="https://media.licdn.com/dms/image/C5603AQEXOnwgWJn5NA/profile-displayphoto-shrink_200_200/0?e=1539820800&v=beta&t=Lc-yvKAqRLfSVbxS6ptUSebw6OZA6z8ByKiNYzS9hUE" alt="Card image cap">
-        <div class="card-body">
-            <h5 class="card-title">Gian Lazzarini</h5>
-            <p class="card-text">Seen: August 18, 2018</p>
-            @*<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>*@
-            <a href="#" class="btn btn-primary">Show All Occurences</a>
-        </div>
-        </div> 
-        -->
 
+        @*@for (int i = Model.Snapshots.Count() - 1; i >= 0; i--)
+        {
+            if (i % 3 == 0)
+            {
+                <div class="col">
+            }
+            else
+            {
+                
+            }
 
-        @foreach(var snap in Model.Snapshots)
+            </div>
+        }*@
+
+        @foreach (var snap in Model.Snapshots)
         {
             foreach(var person in snap.People)
             {
