--- a/Lazztech.ObsidianPresences.CloudWebApp/Pages/Shared/_Layout.cshtml
+++ b/Lazztech.ObsidianPresences.CloudWebApp/Pages/Shared/_Layout.cshtml
@@ -64,10 +64,10 @@
                 <!-- <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> -->
             </li>
             <li class="nav-item">
-                <a class="nav-link" asp-controller="Home" asp-action="About">About</a>
+                <a class="nav-link" href="/Vision">Vision</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link disabled" href="#">Contact</a>
+                <a class="nav-link" href="/Plants">Plants</a>
             </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
