--- a/Lazztech.ObsidianPresences.CloudWebApp/Pages/Index.cshtml
+++ b/Lazztech.ObsidianPresences.CloudWebApp/Pages/Index.cshtml
@@ -3,47 +3,5 @@
 @{
     ViewData["Title"] = "Home page";
 }
-<div class="container">
-  <div class="row">
-    <div class="col">
-        <h4>Processed Snapshots</h4>
-        <hr>
-
-        @*@for (int i = Model.Snapshots.Count() - 1; i >= 0; i--)
-        {
-            if (i % 3 == 0)
-            {
-                <div class="col">
-            }
-            else
-            {
-                
-            }
-
-            </div>
-        }
-
-        @foreach (var snap in Model.Snapshots)
-        {
-            foreach(var person in snap.People)
-            {
-                <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="@snap.ImageDir" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">@person.Name</h5>
-                    <p class="card-text">Seen: @snap.DateTimeWhenCaptured.ToString()</p>
-                    @*<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>*@
-                    <a href="#" class="btn btn-primary">Show All Occurences</a>
-                </div>
-                </div>
-                <br />   
-            }
-        }
-        
-    </div>
-    <div class="col">
-        <h4>Known Persons</h4>
-        <hr>
-    </div>
-  </div>
-</div>
+<h4>Dashboard</h4>
+<hr>
