--- a/Lazztech.ObsidianPresences.CloudWebApp/Pages/Shared/_Layout.cshtml
+++ b/Lazztech.ObsidianPresences.CloudWebApp/Pages/Shared/_Layout.cshtml
@@ -64,8 +64,8 @@
                     <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
                     <!-- <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> -->
                 </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/Vision">Vision</a>
+            <li class="nav-item active">
+                <a class="nav-link" href="/Vision">Vision<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/Plants">Plants</a>
