Added jumbotron to homepage and got vision loop working kinda.

--- a/Lazztech.ObsidianPresences.CloudWebApp/Pages/Index.cshtml
+++ b/Lazztech.ObsidianPresences.CloudWebApp/Pages/Index.cshtml
@@ -3,5 +3,11 @@
 @{
     ViewData["Title"] = "Home page";
 }
+
+<div class="jumbotron">
+    <h1>Dashboard</h1>
+    <p class="lead">asdfasdf</p>
+</div>
+
 <h4>Dashboard</h4>
 <hr>
