--- a/Lazztech.ObsidianPresences.CloudWebApp/Pages/Vision.cshtml
+++ b/Lazztech.ObsidianPresences.CloudWebApp/Pages/Vision.cshtml
@@ -24,6 +24,7 @@
             {
                 foreach(var person in snap.People)
                 {
+                    <div class="col">
                     <div class="card" style="width: 18rem;">
                         <img class="card-img-top" src="@snap.ImageDir" alt="Card image cap">
                         <div class="card-body">
@@ -34,6 +35,7 @@
                         </div>
                     </div>
                     <br />
+                    </div>
                 }
             }
 
