--- a/Lazztech.ObsidianPresences.CloudWebApp/Pages/Vision.cshtml
+++ b/Lazztech.ObsidianPresences.CloudWebApp/Pages/Vision.cshtml
@@ -77,3 +77,14 @@
     </div>
 </div>
 </div>
+
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h3>hi</h3>
+        </div>
+        <div class="col">
+            <h3>hi</h3>
+        </div>
+    </div>
+</div>
