--- a/Lazztech.ObsidianPresences.CloudWebApp/Pages/Vision.cshtml
+++ b/Lazztech.ObsidianPresences.CloudWebApp/Pages/Vision.cshtml
@@ -47,16 +47,16 @@
                 <hr>
 
                 <div class="row">
-                    @for (int i = 0; i < Model.Snapshots.Count(); i++)
+                    @*@for (int i = 0; i < Model.Snapshots.Count(); i++)
                     {
-                        if (i > 0 && i % 3 == 0)
+                        if (i > 0 && i % 2 == 0)
                         {
                             // CLOSE AND START A NEW ROW
-                        @:</div><br /><div class="row">
+                            @:</div><br /><div class="row">
                         }
 
 
-                    }
+                    }*@
 
                     @foreach (var snap in Model.Snapshots)
                     {
