--- a/Lazztech.ObsidianPresences.CloudWebApp/Pages/Vision.cshtml
+++ b/Lazztech.ObsidianPresences.CloudWebApp/Pages/Vision.cshtml
@@ -50,17 +50,18 @@
                     @*@foreach (var snap in Model.Snapshots)*@
                     @for (int i = 0; i < Model.Snapshots.Count(); i++)
                     {
-                        
-                        if (i > 0 && i % 2 == 0)
-                        {
-                            // CLOSE AND START A NEW ROW
-                            @:</div><br /><div class="row">
-                        }
-
                         foreach (var person in Model.Snapshots[i].People)
                         {
-                            <div class="col-md-6 d-flex align-items-stretch">
-                                <div class="card" style="width: 18rem;">
+                            @*if (i > 0 && i % 2 == 0)
+                            {
+                                // CLOSE AND START A NEW ROW
+                                @:</div>
+                                @:<br />
+                                @:<div class="row">
+                            }*@
+
+                            <div class="col-md-6">
+                                <div class="card">
                                     <img class="card-img-top" src="@Model.Snapshots[i].ImageDir" alt="Card image cap">
                                     <div class="card-body">
                                         <h5 class="card-title">@person.Name</h5>
