Trying to get cards the same height without looking wrong.

--- a/Lazztech.ObsidianPresences.CloudWebApp/Pages/Vision.cshtml
+++ b/Lazztech.ObsidianPresences.CloudWebApp/Pages/Vision.cshtml
@@ -61,6 +61,7 @@
                             }*@
 
                             <div class="col-md-6">
+                            @*<div class="col-md-6 d-flex align-items-stretch">*@
                                 <div class="card">
                                     <img class="card-img-top" src="@Model.Snapshots[i].ImageDir" alt="Card image cap">
                                     <div class="card-body">
