--- a/Lazztech.ObsidianPresences.CloudWebApp/Pages/Index.cshtml
+++ b/Lazztech.ObsidianPresences.CloudWebApp/Pages/Index.cshtml
@@ -6,8 +6,12 @@
 
 <div class="jumbotron">
     <h1>Dashboard</h1>
-    <p class="lead">asdfasdf</p>
+    <p class="lead">We saw this on your camera today:..</p>
+    <p class="lead">Your plants are blank today:..</p>
 </div>
 
 <h4>Dashboard</h4>
 <hr>
+
+<p>Graph about vision</p>
+<p>Graph about plants</p>
