--- a/Lazztech.ObsidianPresences.CloudWebApp/Pages/Vision.cshtml
+++ b/Lazztech.ObsidianPresences.CloudWebApp/Pages/Vision.cshtml
@@ -5,31 +5,31 @@
 
 <div class="container">
     <div class="row">
-        <div class="col">
-            <h4>Processed Snapshots</h4>
+         <div class="col">
+             <h4>Processed Snapshots</h4>
             <hr>
+
             <div class="row">
+                @*@foreach (var snap in Model.Snapshots)*@
                 @for (int i = 0; i < Model.Snapshots.Count(); i++)
                 {
-                    if (i > 0 && i % 3 == 0)
+                    foreach (var person in Model.Snapshots[i].People)
                     {
-                        // CLOSE AND START A NEW ROW
-                    @:</div><br /><div class="row">
-                    }
+                        @*if (i > 0 && i % 2 == 0)
+                        {
+                            // CLOSE AND START A NEW ROW
+                            @:</div>
+                            @:<br />
+                            @:<div class="row">
+                        }*@
 
-
-                }
-
-                @foreach (var snap in Model.Snapshots)
-                {
-                    foreach (var person in snap.People)
-                    {
-                        <div class="col">
-                            <div class="card" style="width: 18rem;">
-                                <img class="card-img-top" src="@snap.ImageDir" alt="Card image cap">
+                        <div class="col-md-4">
+                        @*<div class="col-md-6 d-flex align-items-stretch">*@
+                            <div class="card">
+                                <img class="card-img-top" src="@Model.Snapshots[i].ImageDir" alt="Card image cap">
                                 <div class="card-body">
-                                    <h5 class="card-title">@person.Name</h5>
-                                    <p class="card-text">Seen: @snap.DateTimeWhenCaptured.ToString()</p>
+                                    <h5 class="card-title">@Model.Snapshots[i].DateTimeWhenCaptured.ToString()</h5>
+                                    <p class="card-text">@person.Name</p>
                                     @*<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>*@
                                     <a href="#" class="btn btn-primary">Show All Occurences</a>
                                 </div>
@@ -38,55 +38,74 @@
                         </div>
                     }
                 }
-
             </div>
 
-        </div>
-             <div class="col">
-                <h4>Known Persons</h4>
-                <hr>
+            <h4>Unidentified Snapshots</h4>
+            <hr>
 
-                <div class="row">
-                    @*@foreach (var snap in Model.Snapshots)*@
-                    @for (int i = 0; i < Model.Snapshots.Count(); i++)
+            <div class="row">
+                @*@foreach (var snap in Model.Snapshots)*@
+                @for (int i = 0; i < Model.Snapshots.Count(); i++)
+                {
+                    foreach (var person in Model.Snapshots[i].People)
                     {
-                        foreach (var person in Model.Snapshots[i].People)
+                        @*if (i > 0 && i % 2 == 0)
                         {
-                            @*if (i > 0 && i % 2 == 0)
-                            {
-                                // CLOSE AND START A NEW ROW
-                                @:</div>
-                                @:<br />
-                                @:<div class="row">
-                            }*@
+                            // CLOSE AND START A NEW ROW
+                            @:</div>
+                            @:<br />
+                            @:<div class="row">
+                        }*@
 
-                            <div class="col-md-6">
-                            @*<div class="col-md-6 d-flex align-items-stretch">*@
-                                <div class="card">
-                                    <img class="card-img-top" src="@Model.Snapshots[i].ImageDir" alt="Card image cap">
-                                    <div class="card-body">
-                                        <h5 class="card-title">@person.Name</h5>
-                                        <p class="card-text">Seen: @Model.Snapshots[i].DateTimeWhenCaptured.ToString()</p>
-                                        @*<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>*@
-                                        <a href="#" class="btn btn-primary">Show All Occurences</a>
-                                    </div>
+                        <div class="col-md-4">
+                        @*<div class="col-md-6 d-flex align-items-stretch">*@
+                            <div class="card">
+                                <img class="card-img-top" src="@Model.Snapshots[i].ImageDir" alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title">@Model.Snapshots[i].DateTimeWhenCaptured.ToString()</h5>
+                                    <p class="card-text">@person.Name</p>
+                                    @*<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>*@
+                                    <a href="#" class="btn btn-primary">Show All Occurences</a>
                                 </div>
-                                <br />
                             </div>
-                        }
+                            <br />
+                        </div>
                     }
-                </div>
+                }
             </div>
+            <h4>Known Persons</h4>
+            <hr>
+
+            <div class="row">
+                @*@foreach (var snap in Model.Snapshots)*@
+                @for (int i = 0; i < Model.Snapshots.Count(); i++)
+                {
+                    foreach (var person in Model.Snapshots[i].People)
+                    {
+                        @*if (i > 0 && i % 2 == 0)
+                        {
+                            // CLOSE AND START A NEW ROW
+                            @:</div>
+                            @:<br />
+                            @:<div class="row">
+                        }*@
+
+                        <div class="col-md-4">
+                        @*<div class="col-md-6 d-flex align-items-stretch">*@
+                            <div class="card">
+                                <img class="card-img-top" src="@Model.Snapshots[i].ImageDir" alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title">@person.Name</h5>
+                                    <p class="card-text">Seen: @Model.Snapshots[i].DateTimeWhenCaptured.ToString()</p>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                    <a href="#" class="btn btn-primary">Statistics</a>
+                                </div>
+                            </div>
+                            <br />
+                        </div>
+                    }
+                }
+            </div>
+        </div>
     </div>
 </div>
-
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <h3>hi</h3>
-            </div>
-            <div class="col">
-                <h3>hi</h3>
-            </div>
-        </div>
-    </div>
