--- a/Lazztech.ObsidianPresences.CloudWebApp/Pages/Vision.cshtml
+++ b/Lazztech.ObsidianPresences.CloudWebApp/Pages/Vision.cshtml
@@ -3,6 +3,14 @@
 @{
 }
 
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="#">Home</a></li>
+        <li class="breadcrumb-item"><a href="#">Vision</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Processed</li>
+    </ol>
+</nav>
+
 <div class="container">
     <div class="row">
          <div class="col">
