docker aspnet core watch

--- a/Lazztech.ObsidianPresences.CloudWebApp/Pages/Shared/_Layout.cshtml
+++ b/Lazztech.ObsidianPresences.CloudWebApp/Pages/Shared/_Layout.cshtml
@@ -72,8 +72,8 @@
                         Vision
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Processed</a>
-                        <a class="dropdown-item" href="#">Known</a>
+                        <a class="dropdown-item" href="/Vision">Processed</a>
+                        <a class="dropdown-item" href="/Vision">Known</a>
                         <a class="dropdown-item" href="#">Settings</a>
                     </div>
                 </li>
