--- a/Lazztech.ObsidianPresences.CloudWebApp/Pages/Shared/_Layout.cshtml
+++ b/Lazztech.ObsidianPresences.CloudWebApp/Pages/Shared/_Layout.cshtml
@@ -71,9 +71,10 @@
                         Vision
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="/Vision">Processed</a>
-                        <a class="dropdown-item" href="/Vision">Known</a>
-                        <a class="dropdown-item" href="#">Settings</a>
+                        <a class="dropdown-item" href="/Vision">Index</a>
+                        <a class="dropdown-item" href="/Vision/Processed">Processed</a>
+                        <a class="dropdown-item" href="/Vision/Known">Known</a>
+                        <a class="dropdown-item" href="/Vision/Settings">Settings</a>
                     </div>
                 </li>
                 <li class="nav-item">
