--- a/Lazztech.ObsidianPresences.CloudWebApp/Pages/Vision/Index.cshtml
+++ b/Lazztech.ObsidianPresences.CloudWebApp/Pages/Vision/Index.cshtml
@@ -5,6 +5,20 @@
 }
 
 <div class="container">
+    <h4>New Data</h4>
+    <hr>
+    <div class="row">
+        <div class="col text-center">
+            <a href="#" class="btn btn-primary">Upload new photos to be recognized</a>
+        </div>
+        <div class="col text-center">
+            <a href="#" class="btn btn-primary">Process new snapshot</a>
+        </div>
+    </div>
+    <br />
+</div>
+
+<div class="container">
     <div class="row">
         <div class="col">
             <h4>Processed Snapshots</h4>
