--- a/Lazztech.ObsidianPresences.CloudWebApp/Pages/Shared/_Layout.cshtml
+++ b/Lazztech.ObsidianPresences.CloudWebApp/Pages/Shared/_Layout.cshtml
@@ -64,8 +64,8 @@
                     <!-- <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> -->
                 </li>
                 @*<li class="nav-item">
-                        <a class="nav-link" href="/Vision">Vision</a>
-                    </li>*@
+            <a class="nav-link" href="/Vision">Vision</a>
+        </li>*@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="/Vision" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Vision
@@ -78,8 +78,23 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Plants">Plants</a>
+                    <a class="nav-link" href="/Plants">Crawler</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/Plants">Garden</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/Plants">Health</a>
+                </li>
+                <a class="nav-link dropdown-toggle" href="/Notifications" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Notifications
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    @*<a class="dropdown-item" href="/Vision">Index</a>
+            <a class="dropdown-item" href="/Vision/Processed">Processed</a>
+            <a class="dropdown-item" href="/Vision/Known">Known</a>
+            <a class="dropdown-item" href="/Vision/Settings">Settings</a>*@
+                </div>
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
