--- a/Lazztech.ObsidianPresences.CloudWebApp/wwwroot/css/site.css
+++ b/Lazztech.ObsidianPresences.CloudWebApp/wwwroot/css/site.css
@@ -49,7 +49,7 @@ for details on configuring this project to bundle and minify static web assets. 
 }
 
 canvas {
-    background-color: blue;
+    /*background-color: blue;*/
     width: 100%;
     height: auto;
 }
