--- a/Lazztech.ObsidianPresences.CloudWebApp/Pages/Vision/Index.cshtml
+++ b/Lazztech.ObsidianPresences.CloudWebApp/Pages/Vision/Index.cshtml
@@ -31,19 +31,19 @@
                     foreach (var person in Model.Snapshots[i].People)
                     {
                         @*if (i > 0 && i % 2 == 0)
-                            {
-                                // CLOSE AND START A NEW ROW
-                                @:</div>
-                                @:<br />
-                                @:<div class="row">
-                            }*@
+                {
+                    // CLOSE AND START A NEW ROW
+                    @:</div>
+                    @:<br />
+                    @:<div class="row">
+                }*@
 
                         <div class="col-md-4">
                             @*<div class="col-md-6 d-flex align-items-stretch">*@
                             <div class="card">
                                 @*<canvas id="canvas" width="300" height="300">
-                                        Sorry, your browser doesn't support the &lt;canvas&gt; element.
-                                    </canvas>*@
+                            Sorry, your browser doesn't support the &lt;canvas&gt; element.
+                        </canvas>*@
                                 <img id="@person.Name.Replace(" ", string.Empty)@Model.Snapshots[i].ImageName.Replace(" ", string.Empty)" class="card-img-top" src="@Model.Snapshots[i].ImageDir" alt="Card image cap">
                                 <div class="card-body">
                                     <h5 class="card-title">@Model.Snapshots[i].DateTimeWhenCaptured.ToString()</h5>
@@ -55,7 +55,7 @@
                             <br />
                         </div>
 
-                        <script>
+                        @*<script>
                             $(document).ready(function () {
 
                                 //var c = document.getElementById("canvas");
@@ -70,6 +70,32 @@
                                         $"{person.FaceBoundingBox.RightBottomCoordinate.x}," +
                                         $"{person.FaceBoundingBox.RightBottomCoordinate.y},";
                                 }
+
+                                var c = document.getElementById("@person.Name.Replace(" ", string.Empty)@Model.Snapshots[i].ImageName.Replace(" ", string.Empty)").getContext('2d');
+                                c.rect(@bbCoordinateString);
+                                c.fillStyle = '#FFF';
+                                c.fill();
+                                c.lineWidth = 1;
+                                c.strokeStyle = 'black';
+                                c.stroke();
+                            });</script>*@
+
+                        <script>
+                            (function () {
+
+                                //var c = document.getElementById("canvas");
+                                //var ctx = c.getContext("2d");
+                                //ctx.beginPath();
+                                //ctx.arc(95, 50, 40, 0, 2 * Math.PI);
+                                //ctx.stroke();
+
+                                @{
+                                    var bbCoordinateString = $"{person.FaceBoundingBox.LeftTopCoordinate.x}," +
+                                        $"{person.FaceBoundingBox.LeftTopCoordinate.y}," +
+                                        $"{person.FaceBoundingBox.RightBottomCoordinate.x}," +
+                                        $"{person.FaceBoundingBox.RightBottomCoordinate.y},";
+                                }
+                                console.log("test");
 
                                 var c = document.getElementById("@person.Name.Replace(" ", string.Empty)@Model.Snapshots[i].ImageName.Replace(" ", string.Empty)").getContext('2d');
                                 c.rect(@bbCoordinateString);
