--- a/Lazztech.ObsidianPresences.CloudWebApp/Pages/Vision/Index.cshtml
+++ b/Lazztech.ObsidianPresences.CloudWebApp/Pages/Vision/Index.cshtml
@@ -21,7 +21,7 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <h4>Un-Identified People</h4>
+            <h4>Unidentified Persons</h4>
             <hr>
 
             <div class="row">
