Examining visual studio docker container launch command

--- a/Lazztech.ObsidianPresences.ClientFacade/Pages/Shared/_Layout.cshtml
+++ b/Lazztech.ObsidianPresences.ClientFacade/Pages/Shared/_Layout.cshtml
@@ -119,7 +119,7 @@
                     {
                         @if (i == 0)
                         {
-                            <li class="breadcrumb-item"><a href="/">Home</li>
+                            <li class="breadcrumb-item"><a href="/">Home</a></li>
                         }
 
                         @if (routes[i] != routes.Last())
