--- a/Lazztech.ObsidianPresences.ClientFacade/Pages/Vision/Index.cshtml
+++ b/Lazztech.ObsidianPresences.ClientFacade/Pages/Vision/Index.cshtml
@@ -8,12 +8,12 @@
     <div class="form-group">
         <div class="col-md-10">
             <p>Upload one or more files using this form:</p>
-            <input type="file" name="files" multiple />
+            <input class="btn btn-primary" type="file" name="files" multiple />
         </div>
     </div>
     <div class="form-group">
         <div class="col-md-10">
-            <input type="submit" value="Upload" />
+            <input class="btn btn-primary" type="submit" value="Upload" />
         </div>
     </div>
 </form>
